--- a/dvc.yaml
+++ b/dvc.yaml
@@ -1,4 +1,8 @@
 stages:
+  # always_run:
+  #   cmd: python rough/test.py
+  #   outs:
+  #     -rough/test.txt
   load_data:
     cmd: python src/stage_01_load_save.py --config=config/config.yaml
     deps:
@@ -7,5 +11,18 @@ stages:
       - config/config.yaml
     outs:
       - artifacts/raw_local_dir/data.csv
+
+  split_data:
+    cmd: python src/stage_02_split_data.py --config=config/config.yaml --params=params.yaml
+    deps:
+      - src/stage_02_split_data.py
+      - src/utils/all_utils.py
+      - config/config.yaml
+    params:
+      - base.random_state
+      - base.test_size
+    outs:
+      - artifacts/split_data_dir/train.csv
+      - artifacts/split_data_dir/test.csv
 
 
