--- a/dvc.yaml
+++ b/dvc.yaml
@@ -44,4 +44,17 @@ stages:
     - artifacts/model_dir/ElasticNet.model
 
 
+  evaluate:
+    cmd: python src/stage_04_evaluate.py --config=config/config.yaml --params=params.yaml
+    deps:
+      - src/stage_04_evaluate.py
+      - src/utils/all_utils.py
+      - config/config.yaml
+      - artifacts/split_data_dir/test.csv
+      - artifacts/model_dir/ElasticNet.model
+      
+      
+    outs:
+      - artifacts/reports_dir/scores.json
+
 
